--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 @import "tailwindcss";
+@plugin "daisyui";
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+.menu .active {
+  background: #8ecae670;
+}
